--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
         <title>Home</title>
     </head>
     <body bgcolor="pink">
+        
+    
         <h1>
             <font color="white" size="18"
                 >We love our <font color="red">Country</font></font
             >
         </h1>
-        <h2><font color="white">We love our Country</font></h2>
+        <h2><font color="white"></font></h2>
         <h3><font color="white">We love our Country</font></h3>
         <h4><font color="white">We love our Country</font></h4>
         <h5><font color="white">We love our Country</font></h5>
